--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,10 @@
+:root {
+  --un-shadow-color: red;
+  --z-default: 128;
+  --z-menu: 256;
+  --z-dialog: 512;
+}
+
 * {
   margin: 0;
   padding: 0;
