--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,5 @@
 :root {
-  --un-shadow-color: red;
+  --un-shadow-color: rgba(0,0,0,0.25);
   --z-default: 128;
   --z-menu: 256;
   --z-dialog: 512;
@@ -22,7 +22,7 @@ a {
   text-decoration: none;
 }
 
-button {
+button, input {
   font: inherit;
   border: none;
 }
@@ -39,4 +39,8 @@ html {
     "Noto Sans CJK SC", "Source Han Sans SC", "Source Han Sans CN",
     "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti",
     SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
+}
+
+:focus {
+  outline: none;
 }
