--- a/src/global.scss
+++ b/src/global.scss
@@ -39,6 +39,7 @@ html {
     "Noto Sans CJK SC", "Source Han Sans SC", "Source Han Sans CN",
     "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti",
     SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
+  overflow-x: hidden;
 }
 
 :focus {
