--- a/react-mangosteen/src/global.scss
+++ b/react-mangosteen/src/global.scss
@@ -1,12 +1,21 @@
-html, body, h1, h2, h3, h4, h5, h6, p, img, ol, ul, li, form, table, tr, th, td {
+* {
   border: 0;
-  border-collapse: collapse;
   border-spacing: 0;
-  list-style: none;
   margin: 0;
   padding: 0;
+  font-size: 16px;
 }
 
 body, #root {
   height: 100vh;
+}
+
+html {
+  font-size: 16px;
+  font-family: -apple-system, "Helvetica Neue", Helvetica, "Nimbus Sans L",
+    Arial, "Liberation Sans", "PingFang SC", "Hiragino Sans GB",
+    "Noto Sans CJK SC", "Source Han Sans SC", "Source Han Sans CN",
+    "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti",
+    SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
+  overflow-x: hidden;
 }
