--- a/react-mangosteen/src/global.scss
+++ b/react-mangosteen/src/global.scss
@@ -19,3 +19,11 @@ html {
     SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
   overflow-x: hidden;
 }
+
+a {
+  text-decoration: none;
+}
+
+ul, li {
+  list-style: none;
+}
