--- a/react-mangosteen/src/views/items.module.scss
+++ b/react-mangosteen/src/views/items.module.scss
@@ -1,5 +1,4 @@
 .active {
-  color: red;
   position: relative;
   &::after {
     display: inline-block;
@@ -7,6 +6,8 @@
     width: 100%;
     height: 2px;
     bottom: 0;
+    left: 0;
+    opacity: 0.5;
     position: absolute;
     background-color: #fff;
   }
